clusters/eu001/apps/auth/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-route
  namespace: auth
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.eu001.smescloud.com`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
  tls:
    secretName: auth-eu001-tls
